--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -113,6 +113,9 @@
             font-size: 0.9rem;
         }
     </style>
+
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
     <header>
